Replace overwhelming Spring Boot * Remove Spring Boot * Use ApplicationFactory pattern instead Spring's DI * Use Hoplite config instead Spring's properties (Aliases for old behavior enabled) * use installDist for docker instead Spring Boot gradle plugin * Use java's virtual thread with loop instead Spring's scheduler